# SpotifyAddBlocker

./: .gitignore  CMakeLists.txt  main.cpp
App/: CMakeLists.txt  main.cpp
App/CommonTools/_inc/: CommonTypes.hpp
App/ResourceVerifier/: CMakeLists.txt
App/ResourceVerifier/_inc/: ResourceVerifierInterface.hpp  WinResourceVerifer.hpp
App/ResourceVerifier/_src/: WinResourceVerifer.cpp
App/WindowsApiWrapper/: CMakeLists.txt
App/WindowsApiWrapper/_inc/: ComObjBaseWrapper.hpp  WindowsWrapper.hpp
App/WindowsApiWrapper/_src/: ComObjBaseWrapper.cpp  WindowsWrapper.cpp
CommonTools/_inc/: CommonTypes.hpp
ResourceVerifier/_inc/: ResourceVerifierInterface.hpp
Tests/: CMakeLists.txt  test.cpp
Tests/_mock/: MockComObjBaseWrapper.hpp  MockWindowsWrapper.hpp
Tests/_stub/: IPersistFileBridge.hpp  IShellLinkWBridge.hpp
Tests/_tests/: WinResourceVeriferTest.cpp
